Fix alignment issues

--- a/SCSS/about.scss
+++ b/SCSS/about.scss
@@ -605,7 +605,7 @@ body {
         }
 
         @include desktop {
-          left: 30%;
+          left: 50%;
         }
 
         top: 18px;
@@ -642,7 +642,7 @@ body {
         }
 
         @include desktop {
-          left: 32%;
+          left: 52%;
           top: 18px;
         }
 
